tests/ui/traits/next-solver/normalize/normalize-param-env-3.stderr
error[E0277]: the trait bound `C: Channel<()>` is not satisfied
  --> $DIR/normalize-param-env-3.rs:25:5
   |
LL | /     fn send<C>()
LL | |
LL | |
LL | |     where
LL | |         C: Channel<Self::Msg>,
   | |______________________________^ the trait `Channel<()>` is not implemented for `C`

error[E0277]: the trait bound `C: Channel<()>` is not satisfied
  --> $DIR/normalize-param-env-3.rs:25:5
   |
LL | /     fn send<C>()
LL | |
LL | |
LL | |     where
LL | |         C: Channel<Self::Msg>,
   | |______________________________^ the trait `Channel<()>` is not implemented for `C`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
